# s2mg

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  swd_file.cpp  swd_file.hpp  swd_structs.hpp
src/s2mg/: random.hpp  swd_file.hpp
src/s2mg/map/: animal_type.hpp  handles.hpp  map.hpp  map_data.hpp  map_dimensions.hpp  mineral_type.hpp  n_handles.hpp  object_type.hpp  swd_file_from_map.cpp  swd_file_from_map.hpp  terrain_type.hpp
src/s2mg/map/handles/: edge_handle.cpp  face_handle.cpp  face_handle.hpp  halfedge_handle.cpp  halfedge_handle.hpp  map_handle.hpp  vertex_handle.cpp  vertex_handle.hpp
src/s2mg/map/iterators/: circulator_ranges.hpp  generic_circulator.hpp  iterators.hpp  ranges.hpp
src/s2mg/map_data/: coord.hpp  map_dimensions.cpp  map_dimensions.hpp  n_handles.cpp
src/s2mg/map_data/handles/: edge_handle.hpp  face_handle.hpp  face_orientation.hpp  halfedge_handle.cpp  vertex_handle.cpp  vertex_handle.hpp
src/s2mg/map_data/iterators/: circulator_ranges.hpp  circulators.hpp
src/s2mg/swd/: swd_file.cpp  swd_file.hpp  swd_file_load_error.hpp  swd_structs.hpp
test/: halfedge_test.cpp  map_circulation_test.cpp  map_data_test.cpp  map_iteration_test.cpp  map_iterator_test.cpp  map_navigation_test.cpp  swd_file_from_map_test.cpp
